# smartai

./: .gitmodules  LICENSE  README.md  TTDSL.hs  init.sh  smartai.cabal
sources/: MModel.hs  Main.hs  SPrelude.hs  TTDSL.hs
